--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 streamlit==1.10.0
 
 # Streamlit components
-streamlit-ace
-streamlit-discourse
-streamlit-disqus
-streamlit-elements
-streamlit-pandas-profiling
-streamlit-player
-streamlit-quill
+#streamlit-ace
+#streamlit-discourse
+#streamlit-disqus
+#streamlit-elements
+#streamlit-pandas-profiling
+#streamlit-player
+#streamlit-quill
 
 # Dependencies
 pandas-profiling
